QA-11492 : release version for felix framework
git-svn-id: https://devtools.jahia.com/svn/patches/trunk@174 30545e79-4b65-4b5b-b252-900922a36c70

--- a/felix-framework/pom.xml
+++ b/felix-framework/pom.xml
@@ -33,7 +33,7 @@
         <sourceArtifact.groupId>org.apache.felix</sourceArtifact.groupId>
         <sourceArtifact.artifactId>org.apache.felix.framework</sourceArtifact.artifactId>
         <sourceArtifact.version>5.4.0</sourceArtifact.version>
-        <jahia.patch.version>jahia1-SNAPSHOT</jahia.patch.version>
+        <jahia.patch.version>jahia1</jahia.patch.version>
         <dollar>$</dollar>
         <felix.java.version>6</felix.java.version>
     </properties>
