--- a/fileinstall/pom.xml
+++ b/fileinstall/pom.xml
@@ -29,13 +29,13 @@
   <name>Apache Felix File Install</name>
   <description>A utility to automatically install bundles from a directory.</description>
   <url>http://felix.apache.org/site/apache-felix-file-install.html</url>
-  <version>3.7.4</version>
+  <version>3.7.4-jahia1-SNAPSHOT</version>
   <artifactId>org.apache.felix.fileinstall</artifactId>
   <scm>
-    <connection>scm:git:https://github.com/apache/felix-dev.git</connection>
-    <developerConnection>scm:git:https://github.com/apache/felix-dev.git</developerConnection>
-    <url>https://gitbox.apache.org/repos/asf?p=felix-dev.git</url>
-    <tag>org.apache.felix.fileinstall-3.7.4</tag>
+    <connection>scm:git:https://github.com/Jahia/felix</connection>
+    <developerConnection>scm:svn:git@github.com:Jahia/felix.git</developerConnection>
+    <url>scm:svn:https://github.com/Jahia/felix-dev</url>
+    <tag>org.apache.felix.fileinstall-3.6.4-jahia</tag>
   </scm>
   <properties>
     <felix.java.version>8</felix.java.version>
