--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <artifactId>org.apache.felix.webconsole</artifactId>
     <packaging>bundle</packaging>
-    <version>4.3.16-jahia3</version>
+    <version>4.3.16-jahia3-SNAPSHOT</version>
 
     <name>Apache Felix Web Management Console</name>
     <description>
@@ -60,10 +60,10 @@
     </distributionManagement>
 
     <scm>
-        <connection>scm:git:https://github.com/Jahia/felix-dev</connection>
-        <developerConnection>scm:git:git@github.com:Jahia/felix-dev.git</developerConnection>
-        <url>https://github.com/Jahia/felix-dev</url>
-        <tag>org.apache.felix.webconsole-4.3.16</tag>
+        <connection>scm:git:https://github.com/Jahia/felix</connection>
+        <developerConnection>scm:git:git@github.com:Jahia/felix.git</developerConnection>
+        <url>https://github.com/Jahia/felix</url>
+        <tag>webconsole-4-3-X-jahia</tag>
     </scm>
 
     <build>
