[maven-release-plugin] prepare release org.apache.felix.webconsole-4.3.16-jahia3

--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <artifactId>org.apache.felix.webconsole</artifactId>
     <packaging>bundle</packaging>
-    <version>4.3.16-jahia3-SNAPSHOT</version>
+    <version>4.3.16-jahia3</version>
 
     <name>Apache Felix Web Management Console</name>
     <description>
@@ -63,7 +63,7 @@
         <connection>scm:git:https://github.com/Jahia/felix-dev</connection>
         <developerConnection>scm:git:git@github.com:Jahia/felix-dev.git</developerConnection>
         <url>https://github.com/Jahia/felix-dev</url>
-        <tag>org.apache.felix.webconsole-4.3.16-jahia</tag>
+        <tag>org.apache.felix.webconsole-4.3.16-jahia3</tag>
     </scm>
 
     <build>
