--- a/fileinstall/pom.xml
+++ b/fileinstall/pom.xml
@@ -77,6 +77,20 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>thirdparty-snapshots</id>
+      <name>Jahia Third-party Snapshots</name>
+      <url>https://devtools.jahia.com/nexus/content/repositories/thirdparty-snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>thirdparty-releases</id>
+      <name>Jahia Third-party Releases</name>
+      <url>https://devtools.jahia.com/nexus/content/repositories/thirdparty-releases</url>
+    </repository>
+  </distributionManagement>
+
   <build>
     <plugins>
       <plugin>
